fixed device selection bug

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pandas==1.5.2
 PyWavelets==1.4.1
 scikit_image==0.19.3
 scipy==1.10.1
-skimage==0.0
+scikit-image==0.19.3
 torch==1.13.1
 torchinfo==1.7.2
 torchvision==0.14.1
